Bug 375320, XForms leaks, r=aaronr,doronr